# gscholar

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README  README.md  makefile  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: python-package.yaml
googlescholar/: googlescholar.py  gscholar.py
gscholar/: __init__.py  __main__.py  gscholar.py  version.py
test/: test_gscholar.py
tests/: test_gscholar.py  test_version.py
